Added HTML Email Section

--- a/src/sass/layout/_projects.scss
+++ b/src/sass/layout/_projects.scss
@@ -84,6 +84,10 @@
   box-shadow: 0 0.5rem 1rem rgba($color-black, 0.8);
 }
 
+#phone-img {
+  box-shadow: none;
+}
+
 .project-text {
   font-family: "Judson", serif;
   padding: 0 2rem;
