Changed Layout and added Blog

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,8 @@
 @import "./sass/layout/footer";
 @import "./sass/layout/navigation";
 @import "./sass/layout/grid";
+@import "./sass/layout/blog";
+@import "./sass/layout/form";
 @import "./sass/layout/gallery";
 
 * {
