--- a/src/sass/layout/_grid.scss
+++ b/src/sass/layout/_grid.scss
@@ -107,3 +107,44 @@
     }
   }
 }
+
+.grid-services {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+  grid-gap: 30px;
+  justify-items: center;
+  align-items: center;
+  margin: 2rem auto;
+  @media screen and (max-width: 800px) {
+    display: block;
+  }
+}
+
+.grid-projects {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+  grid-gap: 10px;
+  justify-items: center;
+  align-items: center;
+
+  padding: 1rem 0;
+  @media screen and (max-width: 800px) {
+    display: block;
+  }
+}
+
+.grid-blog {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+  grid-gap: 30px;
+  justify-items: center;
+  align-items: center;
+
+  padding: 2rem 1.5rem;
+  @media screen and (max-width: 800px) {
+    display: block;
+  }
+}
