--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,6 +1,9 @@
 //COLORS
 $color-white: #fff;
 $color-black: #000;
+$color-black-2: #0c0c0c;
+$color-black-3: #161617;
+$color-primary: #c69963;
 $color-light-grey: #dcdcdc;
 $color-light-grey-2: #f2f2f2;
 $color-light-grey-3: #faf9f9;
