--- a/src/sass/layout/_gallery.scss
+++ b/src/sass/layout/_gallery.scss
@@ -7,6 +7,6 @@
   font-weight: 700;
   font-size: 1.5rem;
   margin: 0 auto;
-  font-family: "Archivo Black", sans-serif;
   letter-spacing: 0.2rem;
+  font-family: "Judson", serif;
 }
