--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -3,26 +3,39 @@
   width: 100%;
   height: auto;
   padding-bottom: 1.5rem;
-  background-color: $color-light-grey;
   text-align: center;
   font-family: "Judson", serif;
-}
-
-.text-box {
-  margin: 0 auto;
+  padding-top: 2rem;
+  margin-bottom: 1rem;
+  background-image: linear-gradient(
+      to right bottom,
+      rgba($color-black, 0.8),
+      rgba($color-black-2, 0.8)
+    ),
+    url("../../img/profile_img.JPG");
+  background-size: cover;
+  background-position: top;
+  position: relative;
+  z-index: 1;
+  height: 75vh;
 }
 
 .heading-primary {
-  padding-top: 2rem;
-  margin-bottom: 3rem;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: $color-white;
   @media screen and (max-width: 430px) {
     padding-top: 0.7rem;
   }
 
   &--main {
     display: block;
-    font-size: 4.5rem;
+    font-size: 6rem;
     font-weight: 400;
+
     @media screen and (max-width: 375px) {
       font-size: 3rem;
       padding: 1.5rem;
@@ -35,13 +48,30 @@
 
   &--sub {
     display: block;
-    font-size: 2rem;
+    font-size: 3rem;
     font-weight: 500;
+    color: $color-primary;
     @media screen and (max-width: 375px) {
       font-size: 1.3rem;
     }
     @media screen and (max-width: 430px) {
       font-size: 1.2rem;
     }
+  }
+  &--icons {
+    padding-top: 1.5rem;
+  }
+}
+
+.heading-iconbox {
+  padding-top: 1.5rem;
+}
+
+.header-icons {
+  height: 2.5rem;
+  padding-left: 3rem;
+  cursor: pointer;
+  &:hover {
+    opacity: 0.7;
   }
 }
