--- a/src/sass/layout/_mainbody.scss
+++ b/src/sass/layout/_mainbody.scss
@@ -21,7 +21,8 @@
 .mainbody-text-container {
   text-align: center;
   flex: 0 0 50%;
-  padding: 1.2rem;
+  margin: 1rem;
+  padding-bottom: 1.3rem;
   @media screen and (max-width: 375px) {
     padding: 0;
     margin: 0;
