--- a/src/sass/layout/_projects.scss
+++ b/src/sass/layout/_projects.scss
@@ -1,164 +1,107 @@
-.project-container {
+.portfolio-container {
   width: 100%;
   height: auto;
+  margin: 0;
+  padding: 0;
   text-align: center;
-  font-family: "Judson", serif;
+  background-color: $color-black-3;
 }
 
-.project-header {
+.portfolio-heading {
+  font-size: 2rem;
+  color: $color-primary;
+  padding: 1.5rem 0;
   letter-spacing: 2px;
-  padding: 1rem;
 }
 
-.row {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+.portfolio-card {
+  position: relative;
+  width: 90%;
+  height: auto;
+  max-width: 400px;
+  margin: auto;
+  overflow: hidden;
+  @media screen and (max-width: 800px) {
+    padding: 1.5rem 0;
+  }
+}
+
+.portfolio-card .portfolio-card-overlay {
+  background: rgba(0, 0, 0, 0.7);
+  position: absolute;
+  height: 99%;
   width: 100%;
-  padding: 1rem;
-  margin: 0 auto;
-
-  @media screen and (max-width: 320px) {
-    display: block;
-  }
-  @media screen and (max-width: 375px) {
-    display: block;
-  }
-  @media screen and (max-width: 460px) {
-    display: block;
-  }
-  @media screen and (max-width: 736px) {
-    display: block;
-  }
-  @media screen and (max-width: 991px) {
-    display: block;
-  }
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  opacity: 0;
+  -webkit-transition: all 0.4s ease-in-out 0s;
+  -moz-transition: all 0.4s ease-in-out 0s;
+  transition: all 0.4s ease-in-out 0s;
 }
 
-.columns {
-  display: flex;
-  flex-direction: column;
-  flex-basis: 100%;
-  flex: 1;
-  margin: 0 auto;
-
-  &--svc {
-    margin-top: 1rem;
-    padding: 1rem;
-    p {
-      padding-top: 0.5rem;
-      @media screen and (max-width: 375px) {
-        padding-top: 0.5rem;
-      }
-      @media screen and (max-width: 460px) {
-        padding-top: 0.5rem;
-      }
-      @media screen and (max-width: 736px) {
-        padding-top: 0.5rem;
-      }
-      @media screen and (max-width: 991px) {
-        padding-top: 0.5rem;
-      }
-    }
-    &:hover {
-      transform: translateY(-1.5rem) scale(1.03);
-    }
-    @media screen and (max-width: 375px) {
-      display: block;
-    }
-    @media screen and (max-width: 460px) {
-      display: block;
-    }
-    @media screen and (max-width: 736px) {
-      display: block;
-    }
-    @media screen and (max-width: 991px) {
-      display: block;
-    }
-  }
+.portfolio-card:hover .portfolio-card-overlay {
+  opacity: 1;
+  cursor: pointer;
 }
 
-.photo {
-  max-width: 100%;
-  margin: 1rem auto;
-  box-shadow: 0 0.5rem 1rem rgba($color-black, 0.8);
+.portfolio-card-image {
+  width: 100%;
+  border: 3px solid $color-primary;
 }
 
-#phone-img {
-  box-shadow: none;
-}
-
-.project-text {
-  font-family: "Judson", serif;
-  padding: 0 2rem;
-  margin: 4.5rem 0;
-  @media screen and (max-width: 375px) {
-    padding: 0 1rem;
-    font-size: 1.2rem;
-  }
-
-  &__heading {
-    font-weight: 600;
-    font-size: 3rem;
-    text-align: center;
-    padding: 1rem 0;
-    &--2 {
-      font-size: 1.5rem;
-      text-align: center;
-      font-weight: 600;
-      padding: 0.6rem 0;
-    }
-  }
-
-  ul {
-    list-style: none;
-    padding: 0.3rem 0;
-  }
-  li {
-    font-size: 1.5rem;
-    margin: 0;
-    text-align: center;
-  }
-}
-
-.challenge-header {
-  padding: 1rem 2rem;
-  font-weight: 700;
-  font-size: 1.5rem;
-}
-
-.challenge-text {
-  font-size: 1.2rem;
-}
-
-.project-btn {
-  text-decoration: none;
-  color: $color-black;
-  font-weight: 700;
-}
-
-.project-btn-box {
+.portfolio-card-details {
+  position: absolute;
   text-align: center;
+  padding-left: 1em;
+  padding-right: 1em;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  opacity: 0;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  -moz-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
 
-  &__icon {
-    color: $color-black;
+.portfolio-card:hover .portfolio-card-details {
+  top: 50%;
+  left: 50%;
+  opacity: 1;
+  cursor: pointer;
+}
 
-    &:hover {
-      opacity: 0.8;
-    }
+.portfolio-card-details h3 {
+  color: $color-white;
+  font-weight: 500;
+  letter-spacing: 0.15em;
+  margin-bottom: 0.5em;
+  text-transform: uppercase;
+}
+
+.portfolio-card-details p {
+  color: $color-white;
+  font-size: 1em;
+}
+
+.fadeIn-bottom {
+  top: 80%;
+}
+
+.portfolio-btn-container {
+  margin: 0;
+  padding-right: 5.5rem;
+}
+
+.portfolio-icon {
+  height: 2.5rem;
+  padding-left: 5rem;
+  cursor: pointer;
+  &:hover {
+    opacity: 0.7;
   }
-}
-
-.gh-icon {
-  margin-top: 1rem;
-}
-
-.project-line {
-  width: 30%;
-  margin: 0 auto;
-  border-bottom: 1px solid $color-light-grey;
-  box-shadow: 10px 10px 5px $color-black;
-  -moz-box-shadow: 10px 10px 5px $color-black;
-  -webkit-box-shadow: 10px 10px 5px $color-black;
-  -khtml-box-shadow: 10px 10px 5px $color-black;
 }
