--- a/src/sass/layout/_services.scss
+++ b/src/sass/layout/_services.scss
@@ -4,15 +4,28 @@
   height: auto;
   text-align: center;
   padding-bottom: 1rem;
-  background-color: $color-light-grey;
+  background-color: $color-black;
   font-family: "Judson", serif;
 }
 
-.services-container h2 {
-  padding: 0.5rem;
+.service-header {
+  color: $color-primary;
+  font-size: 2rem;
+  padding: 1.5rem 0;
+}
+
+.service-card {
+  margin: 2rem;
+  padding: 1rem;
+  height: 100%;
+  background-color: $color-black-2;
+  color: $color-white;
+  &__title {
+    margin: 1rem;
+  }
 }
 
 .svc-icons {
-  margin: 1rem auto;
-  color: #800020;
+  margin: 0.5rem auto;
+  color: $color-primary;
 }
